# lotus

./: .gitignore  README.md
examples/: CMakeLists.txt  PointerAnalysisExample.cpp
include/Alias/: PointerAnalysisInterface.h
include/Alias/Andersen/: AndersenAA.h
include/Alias/DyckAA/: DyckCallGraph.h
include/Annotation/ModRef/: ExternalModRefTable.h
include/Annotation/Pointer/: ExternalPointerTable.h
include/Checker/ESSS/: Analyzer.h
include/Checker/Taint/: TaintAnalysis.h  TaintUtils.h
lib/: CMakeLists.txt
lib/Alias/: CMakeLists.txt  PointerAnalysisInterface.cpp
lib/Alias/Andersen/: CMakeLists.txt
lib/Alias/DyckAA/: DyckAliasAnalysis.cpp  DyckCallGraph.cpp
lib/Checker/ESSS/: EHBlockDetector.cpp  ErrorCheckViolationFinder.cpp  Helpers.cpp
lib/Checker/Taint/: CMakeLists.txt  TaintAnalysis.cpp  TaintUtils.cpp
lib/DynamicBidirectedDyck/: CFLGraph.cpp  CFLReach.cpp  DyckReach.cpp
lib/Pestrie/: CMakeLists.txt  bit-indexer.cc  bit-pt.cc  bit-querier.cc  bit-se.cc  bitmap.cc  formatter.cc  matrix-ops.cc  obstack.cc  pes-common.cc  pes-dual.cc  pes-indexer.cc  pes-querier.cc  pes-self.cc  profile_helper.cc  qtester.cc  segtree.cc  treap.cc
tools/: CMakeLists.txt
tools/esss/: esss.cpp
tools/taint/: CMakeLists.txt  taint-analyzer.cpp
